--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -30,7 +30,7 @@
                 android:padding="10dp"
                 android:textSize="20sp"
                 android:textAllCaps="false"
-                android:textColor="@color/greyLighten"
+                android:textColor="@color/colorPrimaryDark"
                 android:layout_marginStart="2dp"
                 android:layout_marginEnd="2dp"
                 android:layout_marginBottom="50dp"/>
