Sending chat request

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,9 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileActivity">
+    tools:context=".SettingsActivity"
+    android:background="@color/colorPrimary">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/visit_user_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="username"
+        android:textAlignment="center"
+        android:textColor="@color/greyLighten"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:drawableStart="@drawable/user"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:padding="22dp"
+        android:layout_marginTop="50dp"
+        />
+
+    <TextView
+        android:id="@+id/visit_user_status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/visit_user_name"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
+        android:text="Hey there, I just joined."
+        android:padding="22dp"
+        android:drawableStart="@drawable/hastag"
+        android:textAlignment="center"
+        android:textColor="@color/greyLighten"
+        android:textSize="18sp"
+        android:textStyle="italic" />
+
+    <Button
+        android:id="@+id/send_message_request_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/visit_user_status"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
+        android:padding="20dp"
+        android:background="@drawable/solid_button"
+        android:textColor="@color/greyDarken"
+        android:text="Send Message"
+        android:textStyle="bold"
+        android:textSize="15sp" />
+
+
+</RelativeLayout>
