--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -53,5 +53,20 @@
         android:textStyle="bold"
         android:textSize="15sp" />
 
+    <Button
+        android:id="@+id/decline_message_request_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/send_message_request_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:padding="20dp"
+        android:background="@drawable/holo_button"
+        android:textColor="@color/grey"
+        android:text="Decline Chat Request"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:visibility="invisible"/>
+
 
 </RelativeLayout>
