--- a/app/src/main/res/layout/users_display_layout.xml
+++ b/app/src/main/res/layout/users_display_layout.xml
@@ -12,12 +12,13 @@
 
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_weight="0.8">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
@@ -52,7 +53,25 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/request_accept_button"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:text="Accept"
+            android:textSize="10sp"
+            android:background="@color/green"
+            android:padding="0dp"
+            android:visibility="invisible"/>
 
+        <Button
+            android:id="@+id/request_reject_button"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:text="Reject"
+            android:textSize="10sp"
+            android:background="@color/red"
+            android:padding="0dp"
+            android:visibility="invisible"/>
 
 
     </LinearLayout>
