--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -13,6 +13,11 @@
         app:showAsAction="never">
     </item>
     <item
+        android:title="Chat Requests"
+        android:id="@+id/main_chat_requests"
+        app:showAsAction="never">
+    </item>
+    <item
         android:title="Settings"
         android:id="@+id/main_settings_option"
         app:showAsAction="never">
