Created chat requests page. Populated it. Error on sender side though. Added a Toolbar

--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -6,11 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".RequestsActivity">
 
+    <include
+        layout="@layout/app_bar_layout"
+        android:id="@+id/chat_requests_toolbar">
+    </include>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat_requests_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_below="@+id/chat_requests_toolbar"/>
 
 </RelativeLayout>
