--- a/app/src/main/res/layout/activity_find_friends.xml
+++ b/app/src/main/res/layout/activity_find_friends.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FindFriendsActivity">
+    tools:context=".FindFriendsActivity"
+    android:background="@color/colorPrimaryDark">
 
     <include
         layout="@layout/app_bar_layout"
