--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,13 +7,19 @@
     tools:context=".SettingsActivity"
     android:background="@color/colorPrimary">
 
+    <include
+        layout="@layout/app_bar_layout"
+        android:id="@+id/settings_toolbar">
+    </include>
+
     <EditText
         android:id="@+id/set_user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
-        android:hint="username"
+        android:hint="Please add a username"
         android:textAlignment="center"
+        android:layout_below="@+id/settings_toolbar"
         android:textColorHint="@color/grey"
         android:textColor="@color/greyLighten"
         android:textStyle="bold"
@@ -23,8 +29,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:padding="22dp"
-        android:layout_marginTop="50dp"
-        />
+        android:layout_marginTop="50dp"/>
 
     <EditText
         android:id="@+id/set_profile_status"
@@ -34,7 +39,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
-        android:hint="Hey there, I just joined."
+        android:hint="Also, add a description/status"
         android:inputType="textMultiLine"
         android:padding="22dp"
         android:drawableStart="@drawable/hastag"
