Improved chat layout a little.

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatActivity">
+    tools:context=".ChatActivity"
+    android:background="@color/colorPrimaryDark">
 
     <include
         android:id="@+id/chat_toolbar"
@@ -17,36 +18,49 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/chat_toolbar"
         android:layout_above="@+id/chat_linear_layout"
-        android:layout_marginBottom="6dp"/>
+        android:layout_marginBottom="6dp"
+        android:padding="20dp"/>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/chat_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:background="@android:color/background_light">
+        android:background="@color/colorPrimaryDark">
+
+        <ImageButton
+            android:id="@+id/send_files_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/attached"
+            android:background="@color/colorPrimaryDark"
+            android:layout_alignParentStart="true"/>
 
         <EditText
             android:id="@+id/input_message"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="type message here..."
+            android:background="@drawable/input_message_dark"
+            android:textColor="@color/green"
+            android:textColorHint="@color/green"
+            android:maxLines="5"
+            android:hint="Type message here..."
             android:padding="15dp"
-            android:layout_weight="0.8"/>
+            android:layout_toEndOf="@+id/send_files_btn"
+            android:layout_toStartOf="@+id/send_message_btn"/>
 
         <ImageButton
             android:id="@+id/send_message_btn"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/send_message"
-            android:layout_weight="0.2"/>
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/up_arrow"
+            android:background="@color/colorPrimaryDark"
+            android:layout_alignParentEnd="true"/>
 
 
-    </LinearLayout>
-
-
+    </RelativeLayout>
 
 
 </RelativeLayout>
