--- a/app/src/main/res/layout/custom_messages_layout.xml
+++ b/app/src/main/res/layout/custom_messages_layout.xml
@@ -15,6 +15,22 @@
         android:padding="10dp"
         android:textSize="14sp"/>
 
+    <ImageView
+        android:id="@+id/message_sender_image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentEnd="true"
+        android:scaleType="centerCrop"
+        android:layout_margin="5dp"/>
+
+    <ImageView
+        android:id="@+id/message_receiver_image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentStart="true"
+        android:scaleType="centerCrop"
+        android:layout_margin="5dp"/>
+
     <TextView
         android:id="@+id/sender_message_text"
         android:layout_width="wrap_content"
