--- a/app/src/main/res/layout/users_display_layout.xml
+++ b/app/src/main/res/layout/users_display_layout.xml
@@ -22,16 +22,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/user_profile_name"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:text="username"
-                    android:textAlignment="textStart"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/greyLighten"/>
-
                 <ImageView
                     android:id="@+id/user_online_status"
                     android:layout_width="15dp"
@@ -40,12 +30,25 @@
                     android:src="@drawable/online"
                     android:visibility="invisible"/>
 
+                <TextView
+                    android:id="@+id/user_profile_name"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="username"
+                    android:textAlignment="textStart"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/greyLighten"/>
+
+
             </LinearLayout>
 
             <TextView
                 android:id="@+id/user_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
                 android:text="user status"
                 android:textAlignment="textStart"
                 android:textSize="15sp"
