--- a/app/src/main/res/drawable/receiver_messages_layout.xml
+++ b/app/src/main/res/drawable/receiver_messages_layout.xml
@@ -2,12 +2,17 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#FFFFFF">
+        android:color="#000000">
     </solid>
 
-    <corners
-        android:radius="15dp">
-    </corners>
+    <stroke
+        android:width="1sp"
+        android:color="@color/blue">
 
+    </stroke>
+
+    <corners
+        android:radius="10dp">
+    </corners>
 
 </shape>
