--- a/app/src/main/res/drawable/sender_messages_layout.xml
+++ b/app/src/main/res/drawable/sender_messages_layout.xml
@@ -2,11 +2,17 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#E0FFC7">
+        android:color="#000000">
     </solid>
 
+    <stroke
+        android:width="1sp"
+        android:color="@color/green">
+
+    </stroke>
+
     <corners
-        android:radius="15dp">
+        android:radius="10dp">
     </corners>
 
 </shape>
