--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -32,8 +32,8 @@
 
         <ImageButton
             android:id="@+id/send_files_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:src="@drawable/attached"
             android:background="@color/colorPrimaryDark"
             android:layout_alignParentStart="true"/>
@@ -45,6 +45,7 @@
             android:background="@drawable/input_message_dark"
             android:textColor="@color/green"
             android:textColorHint="@color/green"
+            android:textSize="16sp"
             android:maxLines="5"
             android:hint="Type message here..."
             android:padding="15dp"
@@ -53,8 +54,8 @@
 
         <ImageButton
             android:id="@+id/send_message_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:src="@drawable/up_arrow"
             android:background="@color/colorPrimaryDark"
             android:layout_alignParentEnd="true"/>
