--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GroupChatActivity">
+    tools:context=".GroupChatActivity"
+    android:background="@color/colorPrimaryDark">
 
     <include
         android:id="@+id/group_chat_bar_layout"
@@ -28,9 +29,11 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/group_chat_display"
                 android:padding="10dp"
-                android:textSize="20sp"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:textSize="15sp"
                 android:textAllCaps="false"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/green"
                 android:layout_marginStart="2dp"
                 android:layout_marginEnd="2dp"
                 android:layout_marginBottom="50dp"/>
@@ -53,12 +56,15 @@
             android:id="@+id/input_group_message"
             android:hint="Type message..."
             android:padding="17dp"
-            android:layout_weight="0.8"/>
+            android:layout_weight="0.8"
+            android:textColorHint="@color/green"
+            android:textColor="@color/green"/>
 
         <ImageButton
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/send_message"
+            android:layout_height="50dp"
+            android:src="@drawable/up_arrow"
+            android:background="@color/colorPrimaryDark"
             android:id="@+id/send_message_button"
             android:layout_weight="0.2"/>
 
