--- a/app/src/main/res/layout/custom_messages_layout.xml
+++ b/app/src/main/res/layout/custom_messages_layout.xml
@@ -10,10 +10,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
-        android:background="@drawable/receiver_messages_layout"
         android:text="receiver messages here"
         android:padding="10dp"
-        android:textSize="14sp"/>
+        android:background="@drawable/receiver_messages_layout"
+        android:textSize="14sp"
+        android:textColor="@color/blue"/>
 
     <ImageView
         android:id="@+id/message_sender_image"
@@ -39,8 +40,9 @@
         android:layout_marginTop="10dp"
         android:layout_alignParentTop="@+id/receiver_message_text"
         android:text="sender messages"
+        android:textColor="@color/green"
+        android:background="@drawable/sender_messages_layout"
         android:textSize="14sp"
-        android:padding="10dp"
-        android:background="@drawable/sender_messages_layout"/>
+        android:padding="10dp"/>
 
 </RelativeLayout>
