--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="greyLighten">#F5F5F5</color>
     <color name="greyDarken">#212121</color>
     <color name="green">#00FF00</color>
+    <color name="blue">#00FFFF</color>
     <color name="red">#ff073a</color>
 </resources>
